Silence some more bogus Valgrind warnings on non-32-bit systems. (Bug #53307)